# fastui2

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: index.md
docs/en/: index.md
docs/en/about/: index.md
docs/en/learn/: index.md  python-types.md
docs/en/reference/: app.md  components.md  index.md  openapi.md  router.md
docs/en/tutorial/: components.md  customization.md  examples.md  first-steps.md  hot-reload.md  index.md  layout-and-navigation.md  openapi.md  routing.md  server-actions.md
docs/ru/: index.md
docs/ru/about/: index.md
docs/ru/learn/: index.md  python-types.md
docs/ru/reference/: app.md  components.md  index.md  openapi.md  router.md
docs/ru/tutorial/: components.md  customization.md  examples.md  first-steps.md  hot-reload.md  index.md  layout-and-navigation.md  openapi.md  routing.md  server-actions.md
docs/stylesheets/: extra.css
examples/: 01_hello_world.py  02_all_components.py  03_route_params.py  04_server_actions.py  05_custom_css.py  06_forms.py  07_navigation.py  08_docs_config.py  09_layout_page.py  10_counter.py  11_todo.py  12_hot_reload.py  13_multi_page.py  14_no_docs.py  15_external_stylesheets.py  16_single_component.py  17_advanced_routing.py  18_inline_styles.py  19_minimal.py  20_dynamic_routes.py  21_crud_app.py  22_setter.py
fastui/: __init__.py  app.py  components.py  router.py
fastui/openapi/: __init__.py  generator.py  swagger.py  urls.py
